--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -28,7 +28,7 @@ stages:
     cfSpace: "dev"
     cfAppName: "app"
     cfCredentialsId: "deploy-to-cf"
-    tmsUpload: true  
+    tmsUpload: false  
 steps:
   artifactPrepareVersion:
     versioningType: "cloud_noTag"
