--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -4,23 +4,26 @@ general:
 
 stages:
   Build:
-    mavenExecuteStaticCodeChecks: false 
+    mavenExecuteStaticCodeChecks: true 
     npmExecuteLint: true
-    npmExecuteScripts: false 
+    npmExecuteScripts: true 
 
   Additional Unit Tests:
-    npmExecuteScripts: false  
+    npmExecuteScripts: true  
+
   Acceptance:
-    cloudFoundryDeploy: false  
+    cloudFoundryDeploy: true  
     cfApiEndpoint: "https://api.cf.us10-001.hana.ondemand.com"
     cfOrg: "0190f4c2trial"
     cfSpace: "dev"
     cfAppName: "app"
     cfCredentialsId: "deploy-to-cf"
     deployType: "standard"
-    npmExecuteEndToEndTests: false 
+    npmExecuteEndToEndTests: true 
+
   Compliance:
-    sonarExecuteScan: false
+    sonarExecuteScan: true
+
   Release:
     cloudFoundryDeploy: true 
     cfApiEndpoint: "https://api.cf.us10-001.hana.ondemand.com"
@@ -28,14 +31,18 @@ stages:
     cfSpace: "dev"
     cfAppName: "app"
     cfCredentialsId: "deploy-to-cf"
-    tmsUpload: false  
+    tmsUpload: true  
+
 steps:
   artifactPrepareVersion:
     versioningType: "cloud_noTag"
+
   npmExecuteLint:
-    failOnError: false
+    failOnError: true
+
   cloudFoundryDeploy:
     mtaDeployParameters: "-f --version-rule ALL"
+    
   tmsUpload:
     nodeName: "qa"
     credentialsId: "tms-sk"
